fix exercises section title alignment (#9)
* fix desktop alignment in Exercises title and add variable for card overlay

* fix paddings and margins in Exersises title block

--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -208,6 +208,7 @@
 @media screen and (min-width: 768px) {
   .content-filter-container {
     gap: 32px;
+    padding-bottom: 32px;
   }
 
   .filter-title-container {
@@ -233,7 +234,6 @@
     justify-content: space-between;
     align-items: center;
     gap: 0;
-    padding-bottom: 32px;
   }
 
   .input-search-exersises {
@@ -268,6 +268,7 @@
     gap: 0;
     flex-wrap: nowrap;
     justify-content: space-between;
+    flex-direction: row;
   }
 
   .filter-title {
