--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -13,6 +13,7 @@
   --exercise-text-color: rgba(36, 36, 36, 0.40);
 
   --border-color: rgba(36, 36, 36, 1);
+  --overlay-category-color: rgba(17, 17, 17, 0.5);
 
   --inactive-pagination-color: #D4D4D4;
   --modal-overlay-color: rgba(4, 4, 4, 0.40);
